Comprehensive security hardening: disable inspect element/developer tools across all browsers, implement anti-XSS/CSRF protections, add security headers, prevent DOM injection attacks, and harden server-side security policies

--- a/biodata.html
+++ b/biodata.html
@@ -104,6 +104,7 @@
     </div>
 
 <script src="prevent-editing.js"></script>
+<script src="security-shield.js"></script>
 <script src="responsive-adaptive.js"></script>
 <script src="scripts.js"></script>
 </body>
