--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <footer>© 2026 EvePlan Events</footer>
 <script src="prevent-editing.js"></script>
-<script src="prevent-editing.js"></script>
+<script src="security-shield.js"></script>
 <script src="responsive-adaptive.js"></script>
 <script src="scripts.js"></script>
 </body>
