--- a/services.html
+++ b/services.html
@@ -101,6 +101,7 @@
     </section>
 
 <script src="prevent-editing.js"></script>
+<script src="security-shield.js"></script>
 <script src="responsive-adaptive.js"></script>
 <script src="scripts.js"></script>
 </body>
