--- a/contact.html
+++ b/contact.html
@@ -64,6 +64,7 @@
 
 <footer>© 2026 EvePlan Events</footer>
 <script src="prevent-editing.js"></script>
+<script src="security-shield.js"></script>
 <script src="responsive-adaptive.js"></script>
 <script src="scripts.js"></script>
 </body>
